--- a/iBach/iBach/iBach/Classes/Modules/Playlists/Playlists.storyboard
+++ b/iBach/iBach/iBach/Classes/Modules/Playlists/Playlists.storyboard
@@ -6,55 +6,100 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Playlists-->
-        <scene sceneID="esI-DP-tjs">
-            <objects>
-                <tableViewController storyboardIdentifier="Playlists" useStoryboardIdentifierAsRestorationIdentifier="YES" id="blu-gG-c6d" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="CXN-H6-eTB">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="6hA-hY-jGQ">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6hA-hY-jGQ" id="k2L-Mb-B6D">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="blu-gG-c6d" id="vOm-1o-L1H"/>
-                            <outlet property="delegate" destination="blu-gG-c6d" id="yXB-Td-c9l"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Playlists" id="5jV-cj-4LJ"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="QKi-hX-Bpb" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="484" y="165"/>
-        </scene>
         <!--Playlists-->
         <scene sceneID="MKH-Oi-gNX">
             <objects>
                 <navigationController storyboardIdentifier="PlaylistsNav" title="Playlists" useStoryboardIdentifierAsRestorationIdentifier="YES" id="wu3-yg-6W5" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Playlists" image="Playlists Icon" id="Tdu-iV-uRI"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="DL0-rG-nKV">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="DL0-rG-nKV">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="blu-gG-c6d" kind="relationship" relationship="rootViewController" id="d7m-q3-l7J"/>
+                        <segue destination="h0k-qr-ewx" kind="relationship" relationship="rootViewController" id="Esx-C4-wZH"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zqp-hd-h2q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-468" y="165"/>
+        </scene>
+        <!--Playlists-->
+        <scene sceneID="E1S-Sj-IMQ">
+            <objects>
+                <viewController id="h0k-qr-ewx" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QFa-xe-g7A">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S2O-1F-tjv">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="502"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <connections>
+                                    <segue destination="AwW-6d-5tm" kind="embed" id="MhE-c2-YOQ"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Aar-JD-tJT"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Playlists" id="aSQ-KA-yFK"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2VB-M1-OhE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="493.60000000000002" y="163.26836581709148"/>
+        </scene>
+        <!--Playlists Table View Controller-->
+        <scene sceneID="kiB-lH-rKb">
+            <objects>
+                <tableViewController id="AwW-6d-5tm" customClass="PlaylistsTableViewController" customModule="iBach" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="360" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="1Cd-6q-eOi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="502"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="playlistCell" rowHeight="360" id="qCt-gR-4l8" customClass="PlaylistsTableViewCell" customModule="iBach" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="360"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qCt-gR-4l8" id="3ce-LE-tEc">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="360"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6HD-86-QLq">
+                                            <rect key="frame" x="16" y="11" width="343" height="342"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmH-8u-B6H">
+                                            <rect key="frame" x="23" y="19" width="330" height="331"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="imageViewCoverArt" destination="6HD-86-QLq" id="MdO-32-m6l"/>
+                                    <outlet property="labelName" destination="dmH-8u-B6H" id="1DS-H9-bA2"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="AwW-6d-5tm" id="AYf-ba-EYC"/>
+                            <outlet property="delegate" destination="AwW-6d-5tm" id="1OK-iR-JD0"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="tableViewPlaylists" destination="1Cd-6q-eOi" id="4Gv-Bf-JIf"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aMV-VR-joc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1397.5999999999999" y="163.71814092953525"/>
         </scene>
     </scenes>
     <resources>
