--- a/iBach/iBach/iBach/Classes/Modules/Settings/Settings.storyboard
+++ b/iBach/iBach/iBach/Classes/Modules/Settings/Settings.storyboard
@@ -89,6 +89,8 @@
         <scene sceneID="SlV-WC-UXq">
             <objects>
                 <navigationController storyboardIdentifier="SettingsNav" title="Settings" useStoryboardIdentifierAsRestorationIdentifier="YES" id="yus-ql-JUH" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Settings" image="Settings Icon" id="7z6-4e-mzW"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="tK8-Zs-ALW">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -102,4 +104,7 @@
             <point key="canvasLocation" x="-895" y="112"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Settings Icon" width="36" height="36"/>
+    </resources>
 </document>
